# TalkEad

./: README.md
agents/: README.md  pyproject.toml
agents/base/: TesteCsv.csv
agents/src/agents/: crew.py  main.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Chat.jsx
